--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@ inc/
 /MANIFEST.bak
 /pm_to_blib
 /*.zip
+
+META.*
+MYMETA.*
+.build/
+_build/
+cover_db/
+blib/
+inc/
+.lwpcookies
+.last_cover_stats
+nytprof.out
+pod2htm*.tmp
+pm_to_blib
+SPLAT-*
+SPLAT-*.tar.gz
